syntax = "proto3";

option csharp_namespace = "Auth.Grpc";

package auth;

// The User information returned by the service
message UserInfo {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string email = 4;
    optional string title = 5;
    optional string affiliation = 6;
}

// The request to get user information by ID
message GetUserRequest {
    int32 user_id = 1;
}

// The response that wraps the user info
message GetUserResponse {
    UserInfo user_info = 1;
}

// The User service definition
service AuthService {
    rpc GetUserById(GetUserRequest) returns (GetUserResponse);
}
